--- a/styles/settings.less
+++ b/styles/settings.less
@@ -15,7 +15,7 @@
 
 
 .settings-view {
-
+	background-color: @app-background-color;
 	// Menu ------------------------------
 
 	.config-menu {
